2004-01-12  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2004-01-11  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

2004-01-11  Ross Golder  <ross@golder.org>

	* th.po: Reverted '%Ey' to '%Y' until a working solution has
	been found for displaying non-Gregorian years.

2004-01-10  Ole Laursen  <olau@hardworking.dk>

	* da.po: Fixed some more strings.

2004-01-10  Christian Neumair  <chris@gnome-de.org>

	* de.po: Updated German translation.

2004-01-10  Changwoo Ryu  <cwryu@debian.org>

	* ko.po: Updated Korean translation.

2004-01-10  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

	* POTFILES.in: Added libnautilus-private/nautilus-file-utilities.c.

2004-01-09  Ole Laursen  <olau@hardworking.dk>

	* da.po: Fixed some strings in Danish translation.

2004-01-08  Christophe Merlet  <redfox@redfoxcenter.org>

	* fr.po: Updated French translation from
	Sebastien Bacher <seb128@debian.org>.

2004-01-07  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2004-01-07 Paul Duffy <dubhthach@compsoc.nuigalway.ie>

        * ga.po: Updated Irish translation 

2004-01-06  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Remove missing files and add some new ones.
	* POTFILES.skip: Remove missing files.
	* no.po: Update.

2004-01-06  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2004-01-05  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

2004-01-04  Jordi Mallach  <jordi@sindominio.net>

	* POTFILES.in: Removed components/text files.
	* ca.po: Updated Catalan translation.

2004-01-02  Sanlig Badral  <Badral@openmn.org>

	* mn.po: Updated Mongolian translation.
    
2004-01-02  Alessio Frusciante  <algol@firenze.linux.it>

	* it.po: Updated Italian translation by
	Luca Ferretti <elle.uca@infinito.it>.

2004-01-02  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
