@@ -1,3 +1,8 @@
+2004-01-12  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.in: 
+	Added missing files.
+
 2004-01-12  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
